# python-wex-core

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.wex/: config.yml
.wex/knowledge/features/: app-level-command.md
.wex/knowledge/readme/: introduction.md
.wex/python/: .last-commit
.wex/python/app_manager/: app_workdir.py  pyproject.toml  requirements.txt
src/wexample_wex_core/addons/: __init__.py
src/wexample_wex_core/app_manager/: __init__.py  __main__.py
src/wexample_wex_core/command/: extended_command.py  middlewares_registry.py  option.py
src/wexample_wex_core/common/: abstract_addon_manager.py  app_manager_kernel.py  app_manager_shell_result.py  command_address.py  command_method_wrapper.py  command_request.py  kernel.py  registry_builder.py
src/wexample_wex_core/config_value/: version_content_config_value.py
tests/: abstract_kernel_test.py  conftest.py  test_alias.py  test_as_sudo.py  test_attach.py  test_autocomplete_suggest.py  test_dict_response.py  test_logging.py  test_ping.py  test_registry_helpers.py  test_yaml_runner.py
tests/common/: test_kernel.py  test_workdir.py
tests/helpers/: test_click_helper.py  test_version_helper.py
tests/response/: abstract_response_test.py  test_dict.py  test_function_response.py  test_list.py  test_output_format_end_to_end.py  test_progress_collection.py  test_queued_collection.py  test_queued_collection_rich.py  test_response_collection.py  test_scalar_responses.py  test_shell_command.py  test_table.py
wex_core/utils/: kernel.py
wexample_wex_core.egg-info/: PKG-INFO  SOURCES.txt
wexample_wex_core/addons/: __init__.py
wexample_wex_core/command/: executor.py  extended_command.py  middleware.py  middleware_executor.py  middlewares_registry.py  option.py
wexample_wex_core/common/: abstract_addon_manager.py  abstract_kernel_child.py  command.py  command_executor.py  command_method_wrapper.py  command_option.py  command_request.py  execution_context.py  execution_pass.py  kernel.py  registry_builder.py  workdir.py
wexample_wex_core/const/: globals.py  middleware.py  registries.py  types.py
wexample_wex_core/context/: execution_context.py
wexample_wex_core/decorator/: command.py  middleware.py  option.py  option_stop_on_failure.py
wexample_wex_core/exception/: abstract_command_option_exception.py  addon_not_registered_exception.py  command_argument_conversion_exception.py  command_function_build_failed_exception.py  command_option_missing_argument_exception.py  command_option_missing_exception.py  command_unexpected_argument_exception.py  file_not_found_command_option_exception.py  path_is_not_directory_command_option_exception.py  path_is_not_file_command_option_exception.py  path_not_found_command_option_exception.py
wexample_wex_core/helpers/: click_helper.py  option.py  version.py
wexample_wex_core/middleware/: abstract_each_path_middleware.py  abstract_middleware.py  each_directory_middleware.py  each_file_middleware.py  each_path_middleware.py
wexample_wex_core/path/: kernel_registry_file.py  kernel_registry_local_file.py
wexample_wex_core/registry/: kernel_registry.py
wexample_wex_core/resolver/: abstract_command_resolver.py  addon_command_resolver.py  service_command_resolver.py
wexample_wex_core/runner/: command_python_command_runner.py  core_python_command_runner.py  core_yaml_command_runner.py
wexample_wex_core/testing/: kernel_test_collector.py
wexample_wex_core/utils/: abstract_kernel_child.py  kernel.py  workdir.py
wexample_wex_core/workdir/: addon_workdir.py  kernel_workdir.py  project_workdir.py  workdir.py
(+183 files in other folders)
