[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-wex-core"
version = "6.0.49"
description = "Wex core"
authors = [{name = "weeger", email = "contact@wexample.com"}]
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
    "click",
    "wexample-app==0.0.58",
    "wexample-filestate-git==0.0.43",
    "wexample-filestate==0.0.56",
    "wexample-helpers-git==0.0.56",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/wexample-wex-core"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_wex_core"
from = "src"
[tool.setuptools.packages.find]
include = ["*"]
exclude = ["wexample_wex_core.testing*"]
