[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-wex-core"
version = "20.3.2"
description = "Wex core"
authors = [{name = "weeger", email = "contact@wexample.com"}]
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
    "click",
    "psutil>=5.9",
    "wexample-app>=12.0.0",
    "wexample-filestate-git>=7.0.0",
    "wexample-filestate>=7.4.0",
    "wexample-helpers-git>=6.6.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/wexample-wex-core"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["wexample_wex_core.testing*"]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_wex_core"
from = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["wexample_wex_core"]
omit = ["*/tests/*", "*/.venv/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if __name__ == .__main__.:", "if TYPE_CHECKING:", "@abstractmethod"]
